src/main/java/query/tbql/parser/TBQLParser.java
// Generated from TBQLParser.g4 by ANTLR 4.7.1
package query.tbql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TBQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ENTITYTYPE=1, OPTYPE=2, COMMA=3, COLON=4, DOT=5, DASH=6, TILDE=7, WITH=8, 
		LOGICALOR=9, LOGICALAND=10, EQUAL=11, UNEQUAL=12, NOT=13, NOTSTR=14, GT=15, 
		LT=16, GEQ=17, LEQ=18, LEFTBRACKET=19, RIGHTBRACKET=20, LEFTSQUAREBRACKET=21, 
		RIGHTSQUAREBRACKET=22, LEFTDOUBLEBRACKET=23, RIGHTDOUBLEBRACKET=24, LEFTARROW=25, 
		RIGHTARROW=26, RIGHTTILDEARROW=27, IN=28, AS=29, AT=30, FROM=31, TO=32, 
		LAST=33, AND=34, OR=35, BEFORE=36, AFTER=37, WITHIN=38, TIMEUNIT=39, DISTINCT=40, 
		COUNT=41, RETURN=42, LIMIT=43, LIST=44, SORTBY=45, ASC=46, DESC=47, INT=48, 
		FLOAT=49, STRING=50, ID=51, NEWLINE=52, WS=53, COMMENT=54, LINE_COMMENT=55;
	public static final int
		RULE_stat = 0, RULE_globalConstraint = 1, RULE_timeWindowConstraint = 2, 
		RULE_multieventQuery = 3, RULE_eventPattern = 4, RULE_entity = 5, RULE_operation = 6, 
		RULE_pathOperation = 7, RULE_event = 8, RULE_attributeExpression = 9, 
		RULE_attributeConstraint = 10, RULE_collection = 11, RULE_collectionElement = 12, 
		RULE_timeWindow = 13, RULE_withClause = 14, RULE_eventRelation = 15, RULE_returnClause = 16, 
		RULE_result = 17, RULE_limit = 18;
	public static final String[] ruleNames = {
		"stat", "globalConstraint", "timeWindowConstraint", "multieventQuery", 
		"eventPattern", "entity", "operation", "pathOperation", "event", "attributeExpression", 
		"attributeConstraint", "collection", "collectionElement", "timeWindow", 
		"withClause", "eventRelation", "returnClause", "result", "limit"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "','", "':'", "'.'", "'-'", "'~'", "'with'", "'||'", 
		"'&&'", "'='", "'!='", "'!'", "'not'", "'>'", "'<'", "'>='", "'<='", "'('", 
		"')'", "'['", "']'", "'<<'", "'>>'", "'<-'", "'->'", "'~>'", "'in'", "'as'", 
		"'at'", "'from'", "'to'", "'last'", "'and'", "'or'", "'before'", "'after'", 
		"'within'", null, "'distinct'", "'count'", "'return'", "'top'", "'list'", 
		"'sort by'", "'asc'", "'desc'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ENTITYTYPE", "OPTYPE", "COMMA", "COLON", "DOT", "DASH", "TILDE", 
		"WITH", "LOGICALOR", "LOGICALAND", "EQUAL", "UNEQUAL", "NOT", "NOTSTR", 
		"GT", "LT", "GEQ", "LEQ", "LEFTBRACKET", "RIGHTBRACKET", "LEFTSQUAREBRACKET", 
		"RIGHTSQUAREBRACKET", "LEFTDOUBLEBRACKET", "RIGHTDOUBLEBRACKET", "LEFTARROW", 
		"RIGHTARROW", "RIGHTTILDEARROW", "IN", "AS", "AT", "FROM", "TO", "LAST", 
		"AND", "OR", "BEFORE", "AFTER", "WITHIN", "TIMEUNIT", "DISTINCT", "COUNT", 
		"RETURN", "LIMIT", "LIST", "SORTBY", "ASC", "DESC", "INT", "FLOAT", "STRING", 
		"ID", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TBQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TBQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatContext extends ParserRuleContext {
		public GlobalConstraintContext globalConstraint;
		public List<GlobalConstraintContext> glbcons = new ArrayList<GlobalConstraintContext>();
		public MultieventQueryContext multieventQuery() {
			return getRuleContext(MultieventQueryContext.class,0);
		}
		public List<GlobalConstraintContext> globalConstraint() {
			return getRuleContexts(GlobalConstraintContext.class);
		}
		public GlobalConstraintContext globalConstraint(int i) {
			return getRuleContext(GlobalConstraintContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << FROM) | (1L << LAST) | (1L << BEFORE) | (1L << AFTER) | (1L << ID))) != 0)) {
				{
				{
				setState(38);
				((StatContext)_localctx).globalConstraint = globalConstraint();
				((StatContext)_localctx).glbcons.add(((StatContext)_localctx).globalConstraint);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			multieventQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalConstraintContext extends ParserRuleContext {
		public GlobalConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalConstraint; }
	 
		public GlobalConstraintContext() { }
		public void copyFrom(GlobalConstraintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AttributeGlobalConstraintContext extends GlobalConstraintContext {
		public Token key;
		public Token not;
		public Token op;
		public Token val;
		public CollectionContext coll;
		public TerminalNode ID() { return getToken(TBQLParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(TBQLParser.EQUAL, 0); }
		public TerminalNode UNEQUAL() { return getToken(TBQLParser.UNEQUAL, 0); }
		public TerminalNode GT() { return getToken(TBQLParser.GT, 0); }
		public TerminalNode LT() { return getToken(TBQLParser.LT, 0); }
		public TerminalNode GEQ() { return getToken(TBQLParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(TBQLParser.LEQ, 0); }
		public TerminalNode IN() { return getToken(TBQLParser.IN, 0); }
		public CollectionContext collection() {
			return getRuleContext(CollectionContext.class,0);
		}
		public TerminalNode NOTSTR() { return getToken(TBQLParser.NOTSTR, 0); }
		public TerminalNode INT() { return getToken(TBQLParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TBQLParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(TBQLParser.STRING, 0); }
		public AttributeGlobalConstraintContext(GlobalConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterAttributeGlobalConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitAttributeGlobalConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitAttributeGlobalConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TimeWindowGlobalConstraintContext extends GlobalConstraintContext {
		public TimeWindowConstraintContext tcons;
		public TimeWindowConstraintContext timeWindowConstraint() {
			return getRuleContext(TimeWindowConstraintContext.class,0);
		}
		public TimeWindowGlobalConstraintContext(GlobalConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterTimeWindowGlobalConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitTimeWindowGlobalConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitTimeWindowGlobalConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalConstraintContext globalConstraint() throws RecognitionException {
		GlobalConstraintContext _localctx = new GlobalConstraintContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalConstraint);
		int _la;
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new AttributeGlobalConstraintContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				((AttributeGlobalConstraintContext)_localctx).key = match(ID);
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOTSTR) {
					{
					setState(47);
					((AttributeGlobalConstraintContext)_localctx).not = match(NOTSTR);
					}
				}

				setState(50);
				((AttributeGlobalConstraintContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << UNEQUAL) | (1L << GT) | (1L << LT) | (1L << GEQ) | (1L << LEQ) | (1L << IN))) != 0)) ) {
					((AttributeGlobalConstraintContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INT:
				case FLOAT:
				case STRING:
					{
					setState(51);
					((AttributeGlobalConstraintContext)_localctx).val = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
						((AttributeGlobalConstraintContext)_localctx).val = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				case LEFTBRACKET:
					{
					setState(52);
					((AttributeGlobalConstraintContext)_localctx).coll = collection();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case AT:
			case FROM:
			case LAST:
			case BEFORE:
			case AFTER:
				_localctx = new TimeWindowGlobalConstraintContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((TimeWindowGlobalConstraintContext)_localctx).tcons = timeWindowConstraint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeWindowConstraintContext extends ParserRuleContext {
		public TimeWindowConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeWindowConstraint; }
	 
		public TimeWindowConstraintContext() { }
		public void copyFrom(TimeWindowConstraintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FromToTimeConstraintContext extends TimeWindowConstraintContext {
		public Token t1;
		public Token t2;
		public TerminalNode FROM() { return getToken(TBQLParser.FROM, 0); }
		public TerminalNode TO() { return getToken(TBQLParser.TO, 0); }
		public List<TerminalNode> STRING() { return getTokens(TBQLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(TBQLParser.STRING, i);
		}
		public FromToTimeConstraintContext(TimeWindowConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterFromToTimeConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitFromToTimeConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitFromToTimeConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BeforeTimeConstraintContext extends TimeWindowConstraintContext {
		public Token t;
		public TerminalNode BEFORE() { return getToken(TBQLParser.BEFORE, 0); }
		public TerminalNode STRING() { return getToken(TBQLParser.STRING, 0); }
		public BeforeTimeConstraintContext(TimeWindowConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterBeforeTimeConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitBeforeTimeConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitBeforeTimeConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LastTimeConstraintContext extends TimeWindowConstraintContext {
		public Token amount;
		public Token unit;
		public TerminalNode LAST() { return getToken(TBQLParser.LAST, 0); }
		public TerminalNode TIMEUNIT() { return getToken(TBQLParser.TIMEUNIT, 0); }
		public TerminalNode INT() { return getToken(TBQLParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TBQLParser.FLOAT, 0); }
		public LastTimeConstraintContext(TimeWindowConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterLastTimeConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitLastTimeConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitLastTimeConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtTimeConstraintContext extends TimeWindowConstraintContext {
		public Token t;
		public TerminalNode AT() { return getToken(TBQLParser.AT, 0); }
		public TerminalNode STRING() { return getToken(TBQLParser.STRING, 0); }
		public AtTimeConstraintContext(TimeWindowConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterAtTimeConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitAtTimeConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitAtTimeConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AfterTimeConstraintContext extends TimeWindowConstraintContext {
		public Token t;
		public TerminalNode AFTER() { return getToken(TBQLParser.AFTER, 0); }
		public TerminalNode STRING() { return getToken(TBQLParser.STRING, 0); }
		public AfterTimeConstraintContext(TimeWindowConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterAfterTimeConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitAfterTimeConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitAfterTimeConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeWindowConstraintContext timeWindowConstraint() throws RecognitionException {
		TimeWindowConstraintContext _localctx = new TimeWindowConstraintContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_timeWindowConstraint);
		int _la;
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AT:
				_localctx = new AtTimeConstraintContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(AT);
				setState(59);
				((AtTimeConstraintContext)_localctx).t = match(STRING);
				}
				break;
			case FROM:
				_localctx = new FromToTimeConstraintContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(FROM);
				setState(61);
				((FromToTimeConstraintContext)_localctx).t1 = match(STRING);
				setState(62);
				match(TO);
				setState(63);
				((FromToTimeConstraintContext)_localctx).t2 = match(STRING);
				}
				break;
			case BEFORE:
				_localctx = new BeforeTimeConstraintContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(BEFORE);
				setState(65);
				((BeforeTimeConstraintContext)_localctx).t = match(STRING);
				}
				break;
			case AFTER:
				_localctx = new AfterTimeConstraintContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(AFTER);
				setState(67);
				((AfterTimeConstraintContext)_localctx).t = match(STRING);
				}
				break;
			case LAST:
				_localctx = new LastTimeConstraintContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				match(LAST);
				setState(69);
				((LastTimeConstraintContext)_localctx).amount = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==INT || _la==FLOAT) ) {
					((LastTimeConstraintContext)_localctx).amount = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(70);
				((LastTimeConstraintContext)_localctx).unit = match(TIMEUNIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultieventQueryContext extends ParserRuleContext {
		public EventPatternContext eventPattern;
		public List<EventPatternContext> defs = new ArrayList<EventPatternContext>();
		public ReturnClauseContext returnClause() {
			return getRuleContext(ReturnClauseContext.class,0);
		}
		public List<EventPatternContext> eventPattern() {
			return getRuleContexts(EventPatternContext.class);
		}
		public EventPatternContext eventPattern(int i) {
			return getRuleContext(EventPatternContext.class,i);
		}
		public WithClauseContext withClause() {
			return getRuleContext(WithClauseContext.class,0);
		}
		public LimitContext limit() {
			return getRuleContext(LimitContext.class,0);
		}
		public MultieventQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multieventQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterMultieventQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitMultieventQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitMultieventQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultieventQueryContext multieventQuery() throws RecognitionException {
		MultieventQueryContext _localctx = new MultieventQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_multieventQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(73);
			((MultieventQueryContext)_localctx).eventPattern = eventPattern();
			((MultieventQueryContext)_localctx).defs.add(((MultieventQueryContext)_localctx).eventPattern);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENTITYTYPE) {
				{
				{
				setState(74);
				((MultieventQueryContext)_localctx).eventPattern = eventPattern();
				((MultieventQueryContext)_localctx).defs.add(((MultieventQueryContext)_localctx).eventPattern);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(80);
				withClause();
				}
			}

			setState(83);
			returnClause();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(84);
				limit();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventPatternContext extends ParserRuleContext {
		public EventPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventPattern; }
	 
		public EventPatternContext() { }
		public void copyFrom(EventPatternContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarPathPatternContext extends EventPatternContext {
		public EntityContext sub;
		public PathOperationContext op;
		public EntityContext obj;
		public EventContext evt;
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public PathOperationContext pathOperation() {
			return getRuleContext(PathOperationContext.class,0);
		}
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public VarPathPatternContext(EventPatternContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterVarPathPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitVarPathPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitVarPathPattern(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NormalEventPatternContext extends EventPatternContext {
		public EntityContext sub;
		public OperationContext op;
		public EntityContext obj;
		public EventContext evt;
		public TimeWindowContext time;
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public TimeWindowContext timeWindow() {
			return getRuleContext(TimeWindowContext.class,0);
		}
		public NormalEventPatternContext(EventPatternContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).enterNormalEventPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TBQLParserListener ) ((TBQLParserListener)listener).exitNormalEventPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TBQLParserVisitor ) return ((TBQLParserVisitor<? extends T>)visitor).visitNormalEventPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventPatternContext eventPattern() throws RecognitionException {
		EventPatternContext _localctx = new EventPatternContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eventPattern);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new NormalEventPatternContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((NormalEventPatternContext)_localctx).sub = entity();
				setState(88);
				((NormalEventPatternContext)_localctx).op = operation(0);
				setState(89);
				((NormalEventPatternContext)_localctx).obj = entity();
				setState(90);
				((NormalEventPatternContext)_localctx).evt = event();
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTBRACKET) {
					{
					setState(91);
					((NormalEventPatternContext)_localctx).time = timeWindow();
					}
				}

				}
				break;
			case 2:
				_localctx = new VarPathPatternContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				((VarPathPatternContext)_localctx).sub = entity();
				setState(95);
				((VarPathPatternContext)_localctx).op = pathOperation();
				setState(96);
				((VarPathPatternContext)_localctx).obj = entity();
				setState(97);
				((VarPathPatternContext)_localctx).evt = event();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
